--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,6 @@
 
   {% seo %}
 
-  <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}" />
   <link rel="stylesheet" href="{{ '/css/override.css' | relative_url }}" />
 
   {% feed_meta %}
@@ -24,7 +23,7 @@
       <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="Site Logo" style="height: 50px; width: auto;" />
     </a>
     <nav class="site-nav">
-      <a href="{{ '/' | relative_url }}">Home</a> |
+      <a href="{{ '/assets/images/ur_logo.png' | relative_url }}">Home</a> |
       <a href="{{ '/about.html' | relative_url }}">About</a> |
       <a href="{{ '/blog/' | relative_url }}">Blog</a>
     </nav>
