--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,6 @@
 
   {% seo %}
 
-  <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}" />
   <link rel="stylesheet" href="{{ '/css/override.css' | relative_url }}" />
 
   {% feed_meta %}
@@ -21,10 +20,10 @@
 
   <header class="site-header" style="display: flex; align-items: center; padding: 10px 20px;">
     <a href="{{ '/' | relative_url }}" class="site-logo-link" style="margin-right: 15px;">
-      <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="Site Logo" style="height: 50px; width: auto;" />
+      <img src="{{ '/assets/images/ur_logo.png' | relative_url }}" alt="Site Logo" style="height: 50px; width: auto;" />
     </a>
     <nav class="site-nav">
-      <a href="{{ '/' | relative_url }}">Home</a> |
+      <a href="{{ '/index.html' | relative_url }}">Home</a> |
       <a href="{{ '/about.html' | relative_url }}">About</a> |
       <a href="{{ '/blog/' | relative_url }}">Blog</a>
     </nav>
