--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 
   <header class="site-header" style="display: flex; align-items: center; padding: 10px 20px;">
     <a href="{{ '/' | relative_url }}" class="site-logo-link" style="margin-right: 15px;">
-      <img src="{{ '/assets/images/ur_logo.png' | relative_url }}" alt="Site Logo" style="height: 50px; width: auto;" />
+      <img src="{{ '/assets/images/ur_logo.png' | /assets/images/ur_logo.png }}" alt="Site Logo" style="height: 50px; width: auto;" />
     </a>
     <nav class="site-nav">
       <a href="{{ '/index.html' | relative_url }}">Home</a> |
