--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,8 @@
       <img src="{{ '/assets/images/ur_logo.png' | /assets/images/ur_logo.png }}" alt="Site Logo" style="height: 50px; width: auto;" />
     </a>
     <nav class="site-nav">
-      <a href="{{ '/index.html' | relative_url }}">Home</a> |
-      <a href="{{ '/about.html' | relative_url }}">About</a> |
+      <a href="{{ '/' | relative_url }}">Hannah Bae</a> |
+      <a href="{{ '/about.html' | relative_url }}">Research</a> |
       <a href="{{ '/blog/' | relative_url }}">Blog</a>
     </nav>
   </header>
