--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,8 @@
   
   <!-- Right side: navigation -->
   <nav class="site-nav">
-    <a href="{{ '/about.html' | relative_url }}" style="margin-right: 15px;">Research</a>
-    <a href="{{ '/blog/' | relative_url }}">Blog</a>
+    <a href="{{ '/CV.html' | relative_url }}" style="margin-right: 15px;">Research</a>
+    <a href="{{ '/Research/' | relative_url }}">Blog</a>
   </nav>
 
 </header>
