--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
   <!-- Right side: navigation -->
   <nav class="site-nav">
     <a href="{{ '/CV.html' | relative_url }}" style="margin-right: 15px;">Research</a>
-    <a href="{{ '/Research/' | relative_url }}">Blog</a>
+    <a href="{{ '/Research.html/' | relative_url }}">Blog</a>
   </nav>
 
 </header>
