--- a/css/override.css
+++ b/css/override.css
@@ -14,6 +14,7 @@ hr {
   font-family: 'Arial', sans-serif;  /* example different font */
   font-size: 1rem;
   color: #555;
+  margin-right: 30px;
   text-decoration: none;
 }
 
