--- a/css/override.css
+++ b/css/override.css
@@ -4,7 +4,7 @@ hr {
 }
 
 .site-title {
-  font-family: 'Georgia', serif;  /* or any font you prefer */
+  font-family: 'Ancizar Serif', serif;
   font-size: 1.4rem;               /* adjust size as needed */
   color: #222;
 }
