--- a/css/override.css
+++ b/css/override.css
@@ -10,7 +10,7 @@ hr {
 }
 
 .site-nav a {
-  font-family: 'Arial', sans-serif;  /* example different font */
+  font-family: 'Ancizar Serif', serif;
   font-size: 1rem;
   color: #555;
   margin-right: 30px;
