--- a/css/override.css
+++ b/css/override.css
@@ -9,13 +9,18 @@ hr {
   color: #222;
 }
 
+.site-nav {
+  display: flex;
+  justify-content: flex-end;  /* Align links to the right */
+  gap: 30px;                  /* Space between links */
+}
+
 .site-nav a {
   font-family: 'Ancizar Serif', serif;
   font-size: 1rem;
   color: #555;
   margin-right: 30px;
   text-decoration: none;
-  text-align: right;
 }
 
 .site-nav a:hover {
