--- a/css/override.css
+++ b/css/override.css
@@ -7,6 +7,7 @@ hr {
   font-family: 'Ancizar Serif', serif;
   font-size: 1.4rem;               /* adjust size as needed */
   color: #222;
+  text-decoration: none;
 }
 
 .site-nav {
