--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
 
   <nav class="site-nav">
     <a href="{{ '/CV.md' | relative_url }}">CV</a>
-    <a href="{{ '/blog/' | relative_url }}">Research</a>
+    <a href="{{ '/research.md' | relative_url }}">Research</a>
   </nav>
 </header>
 </header>
