--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
   </div>
 
   <nav class="site-nav">
-    <a href="{{ '/CV.md' | relative_url }}">CV</a>
+    <a href="{{ '/CV.html' | relative_url }}">CV</a>
     <a href="{{ '/research.html' | relative_url }}">Research</a>
   </nav>
 </header>
