--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,8 +36,8 @@
   </div>
 
   <nav class="site-nav">
-    <a href="{{ '/CV.html' | relative_url }}">CV</a>
-    <a href="{{ '/research.html' | relative_url }}">Research</a>
+    <a href="{{ '/CV.html' | /CV.html }}">CV</a>
+    <a href="{{ '/research.html' | /research.html }}">Research</a>
   </nav>
 </header>
 </header>
