--- a/css/override.css
+++ b/css/override.css
@@ -4,7 +4,7 @@ hr {
 }
 
 .site-title {
-  font-family: Roboto', serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1.4rem;               /* adjust size as needed */
   color: #222;
   text-decoration: none;
