--- a/css/override.css
+++ b/css/override.css
@@ -92,3 +92,12 @@ hr {
   font-size: 2.5em;
   opacity: 0.3;
 }
+
+
+h1 {
+  font-family: '"Roboto", sans-serif;
+  font-size: 2.5rem;                   /* change size */
+  font-weight: bold;                   /* change weight */
+  color: #222222;                     /* change color */
+  margin-bottom: 1rem;                 /* spacing */
+}
