--- a/css/override.css
+++ b/css/override.css
@@ -95,7 +95,7 @@ hr {
 }
 
 
-h1 {
+.h1 {
   font-family: '"Roboto", sans-serif;
   font-size: 2.5rem;                   /* change size */
   font-weight: bold;                   /* change weight */
