--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,14 +27,16 @@
   
 <header class="site-header" style="display: flex; justify-content: space-between; align-items: center; padding: 10px 20px;">
   
-<header class="site-header">
+<header class="site-header_left">
   <div class="logo-title">
     <a href="{{ '/' | relative_url }}" class="site-logo-link">
       <img src="{{ '/assets/images/ur_logo.png' | relative_url }}" alt="Site Logo" />
     </a>
     <a href="{{ '/' | relative_url }}" class="site-title">Hannah Bae</a>
   </div>
+</header>
 
+<header class="site-header_right">
   <nav class="site-nav">
     <a href="{{ '/CV.html' | /CV.html }}">CV</a>
     <a href="{{ '/research.html' | /research.html }}">Research</a>
