--- a/css/override.css
+++ b/css/override.css
@@ -18,7 +18,7 @@ hr {
   gap: 15px;           /* adds horizontal space between logo and title */
 }
 
-.site-header_right {
+.site-header-right {
   display: flex;
   justify-content: flex-end;  /* Align links to the right */
   gap: 30px;              
