--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,14 +32,14 @@
     <a href="{{ '/' | relative_url }}" class="site-logo-link">
       <img src="{{ '/assets/images/ur_logo.png' | relative_url }}" alt="Site Logo" />
     </a>
-    <a href="{{ '/' | relative_url }}" class="site-title">Hannah Bae</a>
+    <a href="{{ '/' | relative_url }}" class="site-title">HANNAH BAE</a>
   </div>
 </header>
 
 <header class="site-header-right">
   <nav class="site-nav">
     <a href="{{ '/CV.html' | /CV.html }}">CV</a>
-    <a href="{{ '/research.html' | /research.html }}">Research</a>
+    <a href="{{ '/research.html' | /research.html }}">RESEARCH</a>
   </nav>
 </header>
 </header>
