--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,11 +9,10 @@
 
   {% seo %}
 
-  <link rel="stylesheet" href="{{ '/css/override.css' | relative_url }}" />
-  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Signika+Negative:wght@300..700&display=swap" rel="stylesheet">  
+  
   
   {% feed_meta %}
   {% if jekyll.environment == 'production' and site.google_analytics %}
