--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
     <a href="{{ '/' | relative_url }}" class="site-logo-link">
       <img src="{{ '/assets/images/ur_logo.png' | relative_url }}" alt="Site Logo" />
     </a>
-    <a href="{{ '/' | relative_url }}" class="site-title">HANNAH BAE</a>
+    <a href="{{ '/' | relative_url }}" class="site-title">Hannah Bae</a>
   </div>
 </header>
 
