--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Signika+Negative:wght@300..700&display=swap" rel="stylesheet">  
+  <link href="https://fonts.googleapis.com/css2?family=Ancizar+Sans:ital,wght@0,100..1000;1,100..1000&family=Ancizar+Serif:ital,wght@0,300..900;1,300..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Signika+Negative:wght@300&display=swap" rel="stylesheet">
   
   
   {% feed_meta %}
@@ -31,7 +31,7 @@
     <a href="{{ '/' | relative_url }}" class="site-logo-link">
       <img src="{{ '/assets/images/ur_logo.png' | relative_url }}" alt="Site Logo" />
     </a>
-    <a href="{{ '/' | relative_url }}" class="site-title">Hannah Bae</a>
+    <a href="{{ '/' | relative_url }}" class="site-title">HANNAH BAE</a>
   </div>
 </header>
 
