--- a/css/override.css
+++ b/css/override.css
@@ -4,13 +4,14 @@ hr {
 }
 
 .site-title {
-  font-family: "Signika Negative", sans-serif;;
+  font-family: "Ancizar Sans", sans-serif;
   font-size: 1.4rem;               /* adjust size as needed */
   color: #222;
   text-decoration: none;
   display: flex;
   align-items: center;
-  font-weight: 600
+  font-weight: 700
+  letter-spacing: 2px;
 }
 
 .logo-title {
