--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,25 +22,21 @@
 <body>
 
 
-
-  
-<header class="site-header" style="display: flex; justify-content: space-between; align-items: center; padding: 10px 20px;">
-  
-<header class="site-header-left">
-  <div class="logo-title">
-    <a href="{{ '/' | relative_url }}" class="site-logo-link">
-      <img src="{{ '/assets/images/ur_logo.png' | relative_url }}" alt="Site Logo" />
-    </a>
-    <a href="{{ '/' | relative_url }}" class="site-title">HANNAH BAE</a>
-  </div>
-</header>
-
-<header class="site-header-right">
-  <nav class="site-nav">
-    <a href="{{ '/CV.html' | /CV.html }}">CV</a>
-    <a href="{{ '/research.html' | /research.html }}">RESEARCH</a>
+<header class="site-header">
+  <div class="logo">HANNAH BAE</div>
+  <nav class="nav-menu">
+    <a href="/">HOME</a>
+    <span>/</span>
+    <a href="/research.html">RESEARCH</a>
+    <span>/</span>
+    <a href="/teaching.html">TEACHING</a>
+    <span>/</span>
+    <a href="/vitae.html">VITAE</a>
+    <span>/</span>
+    <a href="/workshops.html">WORKSHOPS</a>
+    <span>/</span>
+    <a href="/crowe.html">CROWE</a>
   </nav>
-</header>
 </header>
 
   
