--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,13 +29,7 @@
     <span>/</span>
     <a href="/research.html">RESEARCH</a>
     <span>/</span>
-    <a href="/teaching.html">TEACHING</a>
-    <span>/</span>
-    <a href="/vitae.html">VITAE</a>
-    <span>/</span>
-    <a href="/workshops.html">WORKSHOPS</a>
-    <span>/</span>
-    <a href="/crowe.html">CROWE</a>
+    <a href="/CV.html">CV</a>
   </nav>
 </header>
 
