--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,14 +23,16 @@
 
 
 <header class="site-header">
-  <div class="logo">HANNAH BAE</div>
-  <nav class="nav-menu">
-    <a href="/">HOME</a>
-    <span>/</span>
-    <a href="/research.html">RESEARCH</a>
-    <span>/</span>
-    <a href="/CV.html">CV</a>
-  </nav>
+  <div class="header-inner">
+    <div class="logo">HANNAH BAE</div>
+    <nav class="nav-menu">
+      <a href="/">HOME</a>
+      <span>/</span>
+      <a href="/research.html">RESEARCH</a>
+      <span>/</span>
+      <a href="/CV.html">CV</a>
+    </nav>
+  </div>
 </header>
 
   
