--- a/css/override.css
+++ b/css/override.css
@@ -155,7 +155,7 @@ hr {
 
 
 .h1 {
-  font-family: 'EudoxusSansEB', sans-serif;
+  font-family: 'EudoxusSansEB';
   font-size: 2.5rem;                   /* change size */
   color: #222222;                     /* change color */
   margin-bottom: 1rem;                 /* spacing */
